# Distributed-Inventory

./: Cargo.toml  README.md  demo.ps1  test_final.ps1  test_final_clean.ps1  test_manual.ps1  test_simple.ps1  test_system.ps1  test_working.ps1
cd-service/: Cargo.toml
cd-service/src/: client.rs  handlers.rs  main.rs  state.rs
common-models/: Cargo.toml
common-models/src/: lib.rs
hub-service/: Cargo.toml
hub-service/src/: handlers.rs  main.rs  state.rs
service-discovery/: Cargo.toml
service-discovery/src/: handlers.rs  main.rs  state.rs
