[package]
# A correção está aqui. O nome deve ser "common-models"
name = "common-models"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "4", features = ["chrono"] }