[package]
name = "service-discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
common-models = { path = "../common-models" }
